--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dashboard</title>
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="./css/global.css">
+    <link rel="stylesheet" href="./css/normalize.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style.mini.css">
+  </head>
+  <body>
+    <div class="wrapper container">
+      <div class="sidebar">
+        <h1>Sidebar</h1>
+      </div>
+      <div class="main">Main part</div>
+    </div>
+  </body>
 </html>
