--- a/index.html
+++ b/index.html
@@ -4,15 +4,54 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dashboard</title>
-    <link rel="stylesheet" href="./css/global.css">
-    <link rel="stylesheet" href="./css/normalize.css">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/style.mini.css">
+    <link rel="stylesheet" href="./css/global.css" />
+    <link rel="stylesheet" href="./css/normalize.css" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/style.mini.css" />
   </head>
   <body>
     <div class="wrapper container">
       <div class="sidebar">
-        <h1>Sidebar</h1>
+        <nav class="sitenav">
+          <ul class="sitenav__list">
+            <li class="sitenav__item">
+              <a href="" class="sitenav__link">
+                <img src="" alt="" class="sitenav__link--icon" />
+                <span class="sitenav__link--text"></span>
+              </a>
+            </li>
+            <li class="sitenav__item">
+                <a href="" class="sitenav__link">
+                  <img src="./images/overview-icon.svg" alt="" class="sitenav__link--icon" />
+                  <span class="sitenav__link--text">Overview</span>
+                </a>
+              </li>
+              <li class="sitenav__item">
+                <a href="" class="sitenav__link">
+                  <img src="" alt="" class="sitenav__link--icon" />
+                  <span class="sitenav__link--text"></span>
+                </a>
+              </li>
+              <li class="sitenav__item">
+                <a href="" class="sitenav__link">
+                  <img src="" alt="" class="sitenav__link--icon" />
+                  <span class="sitenav__link--text"></span>
+                </a>
+              </li>
+              <li class="sitenav__item">
+                <a href="" class="sitenav__link">
+                  <img src="" alt="" class="sitenav__link--icon" />
+                  <span class="sitenav__link--text"></span>
+                </a>
+              </li>
+              <li class="sitenav__item">
+                <a href="" class="sitenav__link">
+                  <img src="" alt="" class="sitenav__link--icon" />
+                  <span class="sitenav__link--text"></span>
+                </a>
+              </li>
+          </ul>
+        </nav>
       </div>
       <div class="main">Main part</div>
     </div>
