save the changes

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dashboard</title>
+    <link
+      rel="shortcut icon"
+      href="./images/logo-dashboard.svg"
+      type="image/x-icon"
+    />
     <link rel="stylesheet" href="./css/global.css" />
     <link rel="stylesheet" href="./css/normalize.css" />
     <link rel="stylesheet" href="./css/style.css" />
@@ -21,35 +26,39 @@
               </a>
             </li>
             <li class="sitenav__item">
-                <a href="" class="sitenav__link">
-                  <img src="./images/overview-icon.svg" alt="" class="sitenav__link--icon" />
-                  <span class="sitenav__link--text">Overview</span>
-                </a>
-              </li>
-              <li class="sitenav__item">
-                <a href="" class="sitenav__link">
-                  <img src="" alt="" class="sitenav__link--icon" />
-                  <span class="sitenav__link--text"></span>
-                </a>
-              </li>
-              <li class="sitenav__item">
-                <a href="" class="sitenav__link">
-                  <img src="" alt="" class="sitenav__link--icon" />
-                  <span class="sitenav__link--text"></span>
-                </a>
-              </li>
-              <li class="sitenav__item">
-                <a href="" class="sitenav__link">
-                  <img src="" alt="" class="sitenav__link--icon" />
-                  <span class="sitenav__link--text"></span>
-                </a>
-              </li>
-              <li class="sitenav__item">
-                <a href="" class="sitenav__link">
-                  <img src="" alt="" class="sitenav__link--icon" />
-                  <span class="sitenav__link--text"></span>
-                </a>
-              </li>
+              <a href="" class="sitenav__link">
+                <img
+                  src="./images/dashboard-logo.svg"
+                  alt=""
+                  class="sitenav__link--icon"
+                />
+                <span class="sitenav__link--text">Overview</span>
+              </a>
+            </li>
+            <li class="sitenav__item">
+              <a href="" class="sitenav__link">
+                <img src="" alt="" class="sitenav__link--icon" />
+                <span class="sitenav__link--text"></span>
+              </a>
+            </li>
+            <li class="sitenav__item">
+              <a href="" class="sitenav__link">
+                <img src="" alt="" class="sitenav__link--icon" />
+                <span class="sitenav__link--text"></span>
+              </a>
+            </li>
+            <li class="sitenav__item">
+              <a href="" class="sitenav__link">
+                <img src="" alt="" class="sitenav__link--icon" />
+                <span class="sitenav__link--text"></span>
+              </a>
+            </li>
+            <li class="sitenav__item">
+              <a href="" class="sitenav__link">
+                <img src="" alt="" class="sitenav__link--icon" />
+                <span class="sitenav__link--text"></span>
+              </a>
+            </li>
           </ul>
         </nav>
       </div>
